--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.5.2",
     "react-moment": "^0.8.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
+    "react-transition-group": "^2.5.0",
     "redux": "^4.0.0"
   },
   "scripts": {
